# Solutions

./: README.md
MATLAB/: Ex6_1.m  Ex6_2.m  Exp3.m  Exp3_2.m  Exp3_3.m  Exp3_4.m  Exp_1.m  Exp_1_part2a.m  Exp_1_part2b.m  Exp_1_part2b_func.m  Exp_2_Q1.m  Exp_2_Q2.m  Exp_2_Q3.m  Exp_2_Q4.m  Exp_4.m  Exp_4_1.m  Exp_4_2.m  Exp_4_3.m  Q1.m  Q1.slx  Q1i.fig  Q2.m  Q2.slx  Q2i.fig  Q3.m  Q3.slx  Q3i.fig  Q4.m  Q4i.fig  Q5.m  Q5i.fig  Q6.m  Q7.m  Q8.m  Q8i.fig  Untitled.m  Untitled2.m  Untitled3.m  Untitled4.m  Untitled5.m  (+26 more)
MATLAB/New folder/: Exp_1.html  Exp_1_part2a.html  Exp_1_part2b.html  Exp_1_part2b_func.html  Exp_2_Q1.html  Exp_2_Q2.html  Exp_2_Q3.html  Exp_2_Q4.html  Q1.html
MATLAB/html/: Ex6_1.html  Exp3.html  Exp3_2.html  Exp3_3.html  Exp3_4.html  Exp_4_1.html  Exp_4_3.html  Q2.html  Q3.html  Q4.html  Q5.html  Q6.html  Q7.html  Q8.html  exp4_2.html  f.html  fun_eval.html
NetBeans/CodeChef/nbproject/: build-impl.xml  genfiles.properties  project.properties
NetBeans/CodeChef/nbproject/private/: private.xml
NetBeans/CodeChef/src/codechef/: Atm.java  Bakery.java  CalC.java  ChefWay.java  CielRcpt.java  CodeChef.java  EnormousInput.java  Factorial.java  Factorial2.java  FindRemainder.java  Name.java  Packaging.java  Rainbow.java  Riddler.java  SignSequence.java  String1.java  SumOfDigits.java  TeamFormation.java  smallestInArray.java
NetBeans/FindMaximum/: build.xml
NetBeans/FindMaximum/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
NetBeans/FindMaximum/nbproject/private/: private.xml
NetBeans/FindMaximum/src/findmaximum/: Anagrams.java  Applet1.java  Applet2.java  Array.java  Bike.java  BinaryN.java  BubbleSort.java  CakeCandles.java  Cal.java  CallByRef.java  CallByValue.java  Codiva1.java  CompareTriplet.java  Continue.java  DateTime.java  Enum1.java  Exp1.java  Exp2.java  Exp3.java  FindMaximum.java  ForEach.java  GradeBook.java  GradeBookTest.java  InsertionSort.java  Itrtr.java  MergeSort.java  Multithrd.java  NewClass.java  NewClass1.java  NewClass2.java  NewClass3.java  NewClass4.java  NewClass5.java  NewClass6.java  NewClass7.java  Palindrome.java  PatternCount.java  Person.java  PrintAsterisk.java  QuickSort.java  (+11 more)
NetBeans/ds/nbproject/: build-impl.xml  genfiles.properties  project.properties
NetBeans/ds/nbproject/private/: private.xml
NetBeans/ds/src/ds/: DoubleLL.java  LinkedList.java  LinkedList1.java  LinkedList2.java  Stack.java  Test.java
PRACTICE/: CMakeLists.txt  COOK82C.cpp  INOI1201.cpp  INOI1301.cpp  INOI1601.cpp  INOI1601A.cpp  Prog2_1.cpp  Prog2_2.cpp  Prog2_3.cpp  Prog2_4.cpp  Prog2_5.cpp  Prog3_1.cpp  Prog3_2.cpp  Prog3_3.cpp  W1_1.cpp  W1_10.cpp  W1_11.cpp  W1_2.cpp  W1_3.cpp  W1_3a.cpp  W1_4.cpp  W1_5.cpp  W1_6.cpp  W1_7.cpp  W1_8.cpp  W1_9.cpp  W2_1.cpp  W2_3.cpp  W2_5.cpp  W2_6.cpp  W2_7.cpp  W2_9.cpp  ZCO12002.cpp  ZCO12004.cpp  ZCO14001.cpp  ZCO14002.cpp  ZCO14003.cpp  ZCO15002.cpp  absolutePermutation.cpp  alice.cpp  (+47 more)
SPOJ/: CMakeLists.txt  abcdef.cpp  absys.cpp  acode.cpp  acpc10a.cpp  addrev.cpp  ae00.cpp  aggrcow.cpp  aps.cpp  bubblesort.cpp  bytesm2.cpp  cadydist.cpp  candy.cpp  candy3.cpp  canton.cpp  cequ.cpp  chocola.cpp  coef.cpp  coins.cpp  cran02.cpp  dcepc202.cpp  dquery.cpp  dquery1.cpp  eboxes.cpp  edist.cpp  eights.cpp  eqbox.cpp  fctrl.cpp  fibosum.cpp  frnd.cpp  girlsnbs.cpp  hangover.cpp  horrible.cpp  jnext.cpp  lastdig.cpp  marbles.cpp  mmass.cpp  onp.cpp  palin.cpp  parket1.cpp  (+7 more)
Worksheets/: CMakeLists.txt  W2_1.cpp  W2_10.cpp  W2_2.cpp  W2_3.cpp  W2_4.cpp  W2_5.cpp  W2_6.cpp  W2_7.cpp  W2_8.cpp  W2_9.cpp  W3_1.cpp  W3_2.cpp  W3_3.cpp  W3_3n.cpp  W3_4.cpp  W3_5.cpp  W3_7.cpp  W3_8.cpp  linkedl.h
