cmake_minimum_required(VERSION 3.9)
project(PRACTICE)

set(CMAKE_CXX_STANDARD 11)

add_executable(PRACTICE main.cpp dfs.cpp dp1a.cpp oddEvenArrays.cpp
        cardremoval.cpp stringencryption.cpp rotationqueries.cpp xorqueries.cpp
        xorqueries1.cpp tlg.cpp voters.cpp ZCO12002.cpp ZCO14003.cpp
        nCr.cpp mergeSort.cpp alice.cpp INOI1201.cpp COOK82C.cpp ZCO14002.cpp ZCO12004.cpp
        INOI1301.cpp minimumJumps.cpp ZCO15002.cpp ZCO14001.cpp pcycle.cpp INOI1601.cpp INOI1601A.cpp countingLeaf.cpp
        coinChange.cpp bfs_shortestReach.cpp absolutePermutation.cpp gridSearch.cpp compiler.cpp chefwork.cpp wghtnum.cpp
        avgpr.cpp goodpref.cpp avgpr1.cpp goodpref1.cpp recycledNumbers.cpp rd19.cpp recursiveSum.cpp shortUrl.cpp
        maxSumSubarr.cpp longestPalinSubstr.cpp removeElement.cpp naichef.cpp binshffl.cpp arrayrotation.cpp n_C_r.cpp
        stringPermutation.cpp stringPerm1.cpp redundantBraces.cpp Prog2_1.cpp Prog2_2.cpp Prog2_3.cpp Prog2_4.cpp
        Prog2_5.cpp Prog3_1.cpp Prog3_2.cpp Prog3_3.cpp W1_1.cpp W1_2.cpp W1_3.cpp W1_4.cpp W1_7.cpp bfs.cpp
        editDistance.cpp W1_5.cpp W1_6.cpp W1_8.cpp W1_9.cpp W1_11.cpp W1_10.cpp W2_1.cpp W2_3.cpp W2_5.cpp
        linkedList.h W2_6.cpp W2_7.cpp W2_9.cpp W1_3a.cpp chserve.cpp)
add_executable(dfs dfs.cpp)
add_executable(dp1a dp1a.cpp)
add_executable(oddEvenArrays oddEvenArrays.cpp)
add_executable(cardremoval cardremoval.cpp)
add_executable(stringencryption stringencryption.cpp)
add_executable(rotationqueries rotationqueries.cpp)
add_executable(xorqueries1 xorqueries1.cpp)
add_executable(tlg tlg.cpp)
add_executable(voters voters.cpp)
add_executable(ZCO12002 ZCO12002.cpp)
add_executable(ZCO14003 ZCO14003.cpp)
add_executable(nCr nCr.cpp)
add_executable(mergeSort mergeSort.cpp)
add_executable(INOI1201 INOI1201.cpp)
add_executable(COOK82C COOK82C.cpp)
add_executable(ZCO14002 ZCO14002.cpp)
add_executable(ZCO12004 ZCO12004.cpp)
add_executable(INOI1301 INOI1301.cpp)
add_executable(minimumJumps minimumJumps.cpp)
add_executable(ZCO15002 ZCO15002.cpp)
add_executable(ZCO14001 ZCO14001.cpp)
add_executable(pcycle pcycle.cpp)
add_executable(INOI1601 INOI1601.cpp)
add_executable(INOI1601A INOI1601A.cpp)
add_executable(countingLeaf countingLeaf.cpp)
add_executable(coinChange coinChange.cpp)
add_executable(bfs_shortestReach bfs_shortestReach.cpp)
add_executable(absolutePermutation absolutePermutation.cpp)
add_executable(compiler compiler.cpp)
add_executable(chefwork chefwork.cpp)
add_executable(wghtnum wghtnum.cpp)
add_executable(avgpr avgpr.cpp)
add_executable(goodpref goodpref.cpp)
add_executable(avgpr1 avgpr1.cpp)
add_executable(recycledNumbers recycledNumbers.cpp)
add_executable(rd19 rd19.cpp)
add_executable(recursiveSum recursiveSum.cpp)
add_executable(shortUrl shortUrl.cpp)
add_executable(maxSumSubarr maxSumSubarr.cpp)
add_executable(longestPalinSubstr longestPalinSubstr.cpp)
add_executable(removeElement removeElement.cpp)
add_executable(naichef naichef.cpp)
add_executable(binshffl binshffl.cpp)
add_executable(arrayrotation arrayrotation.cpp)
add_executable(n_C_r n_C_r.cpp)
add_executable(stringPermutation stringPermutation.cpp)
add_executable(stringPerm1 stringPerm1.cpp)
add_executable(redundantBraces redundantBraces.cpp)
add_executable(Prog2_1 Prog2_1.cpp)
add_executable(Prog2_2 Prog2_2.cpp)
add_executable(Prog2_3 Prog2_3.cpp)
add_executable(Prog2_4 Prog2_4.cpp)
add_executable(Prog2_5 Prog2_5.cpp)
add_executable(Prog3_1 Prog3_1.cpp)
add_executable(Prog3_2 Prog3_2.cpp)
add_executable(Prog3_3 Prog3_3.cpp)
add_executable(W1_1 W1_1.cpp)
add_executable(W1_2 W1_2.cpp)
add_executable(W1_3 W1_3.cpp)
add_executable(W1_4 W1_4.cpp)
add_executable(W1_7 W1_7.cpp)
add_executable(bfs bfs.cpp)
add_executable(editDistance editDistance.cpp)
add_executable(W1_5 W1_5.cpp)
add_executable(W1_6 W1_6.cpp)
add_executable(W1_8 W1_8.cpp)
add_executable(W1_9 W1_9.cpp)
add_executable(W1_11 W1_11.cpp)
add_executable(W1_10 W1_10.cpp)
add_executable(W2_1 W2_1.cpp)
add_executable(W2_3 W2_3.cpp)
add_executable(W2_5 W2_5.cpp)
add_executable(W2_6 W2_6.cpp)
add_executable(W2_7 W2_7.cpp)
add_executable(W2_9 W2_9.cpp)
add_executable(W1_3a W1_3a.cpp)
add_executable(chserve chserve.cpp)
