cmake_minimum_required(VERSION 3.9)
project(SPOJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(SPOJ main.cpp absys.cpp acode.cpp acpc10a.cpp addrev.cpp aps.cpp candy.cpp candy3.cpp
        coins.cpp eights.cpp fctrl.cpp hangover.cpp willitst.cpp test1.cpp aggrcow.cpp cadydist.cpp canton.cpp
        cequ.cpp stpar.cpp edist.cpp pt07y.cpp ae00.cpp frnd.cpp cran02.cpp prime1.cpp lastdig.cpp bubblesort.cpp
        tricount.cpp chocola.cpp marbles.cpp coef.cpp dcepc202.cpp girlsnbs.cpp toandfro.cpp palin.cpp eqbox.cpp eboxes.cpp abcdef.cpp horrible.cpp fibosum.cpp bytesm2.cpp onp.cpp dquery.cpp dquery1.cpp shakti.cpp)
add_executable(absys absys.cpp)
add_executable(acode acode.cpp)
add_executable(acpc10a acpc10a.cpp)
add_executable(addrev addrev.cpp)
add_executable(aps aps.cpp)
add_executable(candy candy.cpp)
add_executable(candy3 candy3.cpp)
add_executable(coins coins.cpp)
add_executable(eights eights.cpp)
add_executable(fctrl fctrl.cpp)
add_executable(hangover hangover.cpp)
add_executable(willitst willitst.cpp)
add_executable(test1 test1.cpp)
add_executable(cadydist cadydist.cpp)
add_executable(canton canton.cpp)
add_executable(cequ cequ.cpp)
add_executable(stpar stpar.cpp)
add_executable(pt07y pt07y.cpp)
add_executable(ae00 ae00.cpp)
add_executable(frnd frnd.cpp)
add_executable(cran02 cran02.cpp)
add_executable(lastdig lastdig.cpp)
add_executable(bubblesort bubblesort.cpp)
add_executable(tricount tricount.cpp)
add_executable(chocola chocola.cpp)
add_executable(marbles marbles.cpp)
add_executable(coef coef.cpp)
add_executable(dcepc202 dcepc202.cpp)
add_executable(girlsnbs girlsnbs.cpp)
add_executable(toandfro toandfro.cpp)
add_executable(aggrcow aggrcow.cpp)
add_executable(palin palin.cpp)
add_executable(eqbox eqbox.cpp)
add_executable(eboxes eboxes.cpp)
add_executable(abcdef abcdef.cpp)
add_executable(horrible horrible.cpp)
add_executable(fibosum fibosum.cpp)
add_executable(bytesm2 bytesm2.cpp)
add_executable(onp onp.cpp)
add_executable(dquery dquery.cpp)
add_executable(dquery1 dquery1.cpp)

add_executable(shakti shakti.cpp)