cmake_minimum_required(VERSION 3.12)
project(Worksheets)

set(CMAKE_CXX_STANDARD 14)

add_executable(Worksheets main.cpp W2_1.cpp W2_2.cpp linkedl.h W2_3.cpp W2_4.cpp W2_5.cpp W2_6.cpp W2_7.cpp W2_8.cpp W2_9.cpp W2_10.cpp W3_1.cpp W3_2.cpp W3_3.cpp W3_3n.cpp W3_4.cpp W3_5.cpp W3_7.cpp W3_8.cpp W4_1.cpp)

add_executable(W2_1 W2_1.cpp)
add_executable(main main.cpp)
add_executable(W2_2 W2_2.cpp)
add_executable(W2_3 W2_3.cpp)
add_executable(W2_4 W2_4.cpp)
add_executable(W2_5 W2_5.cpp)
add_executable(W2_6 W2_6.cpp)
add_executable(W2_7 W2_7.cpp)
add_executable(W2_8 W2_8.cpp)
add_executable(W2_9 W2_9.cpp)
add_executable(W2_10 W2_10.cpp)
add_executable(W3_1 W3_1.cpp)
add_executable(W3_2 W3_2.cpp)
add_executable(W3_3 W3_3.cpp)
add_executable(W3_3n W3_3n.cpp)
add_executable(W3_4 W3_4.cpp)
add_executable(W3_5 W3_5.cpp)
add_executable(W3_7 W3_7.cpp)
add_executable(W3_8 W3_8.cpp)